--- a/.github/workflows/doc_spellcheck.yml
+++ b/.github/workflows/doc_spellcheck.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   spellcheck:
+    runs-on: ubuntu-latest
     steps:
     - name: Spellcheck Action
       uses: rojopolis/spellcheck-github-actions@0.2.0
