--- a/.github/workflows/doc_spellcheck.yml
+++ b/.github/workflows/doc_spellcheck.yml
@@ -4,21 +4,14 @@ on:
   pull_request:
     paths:
       - '**.md'
-      - '**.txt'
 jobs:
   spellcheck:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - name: misspell
+      uses: reviewdog/action-misspell@v1
       with:
-        python-version: 3.7
-    - name: install aspell
-      run: sudo apt-get install aspell aspell-en
-    - name: upgrade setuptools (Workaround)
-      run: pip install --upgrade setuptools
-    - name: install pyspelling
-      run: pip install pyspelling
-    - name: spellcheck
-      run: python -m pyspelling -c .github/spellcheck.yaml
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          locale: "US"
